# Skill_Bridge

./: AGENTS.md
.agents/skills/production-project-structure/: SKILL.md
.agents/skills/production-project-structure/references/: anti-patterns.md  decision-framework.md  monorepo-blueprint.md  naming-conventions.md  principles.md  stack-patterns.md  templates.md  tooling-configs.md
.agents/skills/system-design-doc/: SKILL.md
Planning/: project_structure.md  system_design_doc.md
backend/: .env.example  .gitignore  conftest.py  pyproject.toml  requirements.txt
backend/evals/: test_learning_planner.py  test_skill_gap.py
backend/scripts/: embed_job_skills.py  job_skills_dataset.csv  test_api_keys.py
backend/src/agents/: state.py
backend/src/agents/learning_planner/: __init__.py  graph.py  nodes.py  schemas.py
backend/src/agents/skill_gap/: __init__.py  graph.py  nodes.py  schemas.py
backend/src/core/: config.py  llm_client.py
backend/src/db/: client.py  schema.sql
backend/src/prompts/: learning_planner.md  skill_gap_analyzer.md
backend/src/retrieval/: embeddings.py  vector_store.py
backend/tests/integration/: test_db_connection.py  test_planner_e2e.py  test_skill_gap_e2e.py
backend/tests/unit/: test_config.py  test_learning_planner_nodes.py  test_retrieval.py  test_skill_gap_nodes.py
documentation/: error_log.md  project_idea.md  project_map.md  sprint_tracker.md  system_design.md
documentation/plan/: implementation_plan.md
documentation/sprint_plan/: sprint01.md  sprint02.md
