[project]
name = "skillbridge-backend"
version = "0.1.0"
description = "SkillBridge — Multi-Agent Adaptive Learning System (FastAPI backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langchain>=0.3",
    "langchain-deepseek>=0.1",
    "langgraph>=0.2",
    "supabase>=2.5",
    "google-generativeai>=0.8",
    "resend>=2.0",
    "tenacity>=8.3",
    "modal>=0.64",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests", "evals"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
